tests/e2e/semantics/mutation/invalid_name.error
Error: syntax error in story at line 1, column 34

1|    a = [1, 2].invalid_mutation_name()
                                       ^

E0041: `)` is not allowed here
