tests/e2e/semantics/mutation/invalid_name.story
a = [1, 2].invalid_mutation_name()
a = "foo"
